objects/SureTax_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Maintains SureTax API configurations and value defaults</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_APN__c</fullName>
        <description>Cloud Billing Product APN code for this entry if applicable</description>
        <inlineHelpText>Cloud Billing Product APN code for this entry if applicable</inlineHelpText>
        <label>Product APN</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>The value of the key-value pair</description>
        <inlineHelpText>The value of the key-value pair</inlineHelpText>
        <label>Value</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>SureTax Settings</label>
    <listViews>
        <fullName>All_detailed</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>SETUP_TYPE</columns>
        <columns>Description__c</columns>
        <columns>Product_APN__c</columns>
        <columns>Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All_detailed</label>
        <language>en_US</language>
    </listViews>
</CustomObject>